Added node_modules to ignore

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "bower_components",
     ".gitignore",
     "Gruntfile.js",
-    "package.json"
+    "package.json",
+    "node_modules"
   ],
   "dependencies": {
     "jquery": "~1.10.2",
