--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,6 @@
   ],
   "dependencies": {
     "jquery": "~1.10.2",
-    "jquery-bootswatch": "~0.0.5",
+    "jquery-bootswatch": "~0.0.5"
   }
 }
